fix: login method not working in production